k8s/applications/web/babybuddy/babybuddy-secret-env-patch.yaml
# FILE: k8s/applications/web/babybuddy/babybuddy-secret-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babybuddy
  namespace: babybuddy
spec:
  template:
    spec:
      containers:
        - name: babybuddy
