k8s/applications/web/babybuddy/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: babybuddy
  namespace: babybuddy
  labels:
    app: babybuddy
spec:
  serviceName: "babybuddy"
  replicas: 1
  selector:
    matchLabels:
      app: babybuddy
  template:
    metadata:
      labels:
        app: babybuddy
    spec:
      hostIPC: false
      hostPID: false
      hostNetwork: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: babybuddy
          image: ghcr.io/linuxserver/babybuddy:2.11.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
            capabilities:
              add:
                - SETUID
                - SETGID
                - SYS_ADMIN
              drop: []
          resources:
            requests:
              cpu: '80m'
              memory: '128Mi'
            limits:
              cpu: '300m'
              memory: '512Mi'
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmp
              mountPath: /run
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 5
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "proxmox-csi"
      resources:
        requests:
          storage: 1Gi
