k8s/applications/web/babybuddy/service.yaml
# FILE: k8s/applications/web/babybuddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: babybuddy
  namespace: babybuddy
  labels:
    app: babybuddy
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: babybuddy
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
